<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tribe9.droiddemo.MainActivity">

    <TextView
        style="@style/textHeader"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/titleHeader" />

    <Button
        android:id="@+id/p1Button"
        style="@style/mButtons"
        android:text="@string/p1" />

    <Button
        android:id="@+id/p2Button"
        style="@style/mButtons"
        android:text="@string/p2" />

    <Button
        android:id="@+id/p3Button"
        style="@style/mButtons"
        android:text="@string/p3" />

    <Button
        android:id="@+id/p4Button"
        style="@style/mButtons"
        android:text="@string/p4" />

    <Button
        android:id="@+id/p5Button"
        style="@style/mButtons"
        android:text="@string/p5" />

    <Button
        android:id="@+id/p6Button"
        style="@style/mButtons"
        android:text="@string/p6" />

</LinearLayout>
